thread config through webpack, first draft of db functionality, added more Utils, refactored Web3lib

--- a/config.example.json
+++ b/config.example.json
@@ -8,5 +8,5 @@
   "abi": {
     "dex": "path_to_dex.json"
   },
-  "msg_prefix": "I agree to sign the following Sniper Exchange order. \n\n[hash]: "
+  "msg_prefix": "Submitting Sniper Order \n\n[hash]\n"
 }
