--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ethereumjs-abi": "0.6.5",
     "ethereumjs-util": "5.1.4",
     "firebase": "^4.10.0",
-    "web3": "1.0.0-beta.27"
+    "web3": "1.0.0-beta.27",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
