--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "6.0.16",
     "babel-preset-es2015": "^6.14.0",
+    "chai-as-promised": "^7.1.1",
     "css-loader": "^0.15.1",
+    "es6-promisify": "~6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
