--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,24 @@
 {
-  "plugins": ["transform-async-to-generator"]
+  "plugins": ["transform-async-to-generator"],
+  "env": {
+    "production": {
+      "presets": [
+        [
+          "env",{
+            "modules": false,
+            "targets": ["ie >= 9"]
+          }
+        ]
+      ],
+      "comments": false
+    },
+    "test": {
+      "presets": [
+        [
+          "env",{"targets": {"node": "current"}}
+        ]
+      ],
+      "plugins": ["istanbul"]
+    }
+  }
 }
