--- a/package.json
+++ b/package.json
@@ -10,36 +10,70 @@
   "scripts": {
     "start": "webpack-dashboard -- webpack-dev-server --config ./config/webpack.config.js --port 9000 --inline",
     "build": "rimraf dist && NODE_ENV=production webpack -p --config ./config/webpack.production.config.js",
-    "test": "node ./node_modules/.bin/mocha"
+    "test": "cross-env NODE_ENV=test mocha --require ./config/mocha.setup",
+    "test-coverage": "cross-env NODE_ENV=test nyc mocha --require ./config/mocha.setup",
+    "coverage": "cross-env NODE_ENV=test nyc mocha --require ./config/mocha.setup && nyc report --reporter=text-lcov > coverage.lcov && codecov"
+  },
+  "nyc": {
+    "require": [
+      "babel-register",
+      "babel-polyfill"
+    ],
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "src/**/Assert/**/*.js",
+      "src/**/Net/**/*.js"
+    ],
+    "check-coverage": true,
+    "sourceMap": false,
+    "instrument": false,
+    "lines": 50,
+    "statements": 50,
+    "functions": 50,
+    "branches": 50
+  },
+  "resolutions": {
+    "hoek": "4.2.1"
   },
   "dependencies": {
     "bignumber.js": "6.0.0",
-    "chai": "^4.1.2",
-    "chai-bignumber": "2.0.2",
-    "dirty-chai": "2.0.1",
-    "ethereumjs-abi": "0.6.5",
-    "ethereumjs-util": "5.1.4",
+    "ethereumjs-abi": "^0.6.5",
+    "ethereumjs-util": "^5.1.4",
     "firebase": "^4.10.0",
-    "web3": "1.0.0-beta.27",
+    "hoek": "4.2.1",
+    "web3": "1.0.0-beta.30",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
     "babel-core": "^6.1.2",
     "babel-loader": "^6.0.1",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "6.0.16",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.14.0",
-    "chai-as-promised": "^7.1.1",
+    "bignumber.js-5": "git+https://github.com/sniper-exchange/bignumber.js.git#release/5.0.0",
+    "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "2.0.2",
+    "codecov": "^3.0.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.15.1",
     "es6-promisify": "~6.0.0",
+    "eslint-plugin-security": "^1.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.16.1",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "mocha": "^5.0.1",
     "node-libs-browser": "^0.5.2",
+    "nsp": "^3.2.1",
+    "nyc": "^11.4.1",
     "pug": "2.0.0-alpha7",
     "pug-html-loader": "^1.0.5",
     "raw-loader": "^0.5.1",
