update http trigger URL

--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
       "dex": ""
     },
     "fb": {
-      "api": "http://localhost:5000/sniper-stage/us-central1/",
+      "api": "https://us-central1-sniper-stage.cloudfunctions.net/",
       "apiKey": "AIzaSyCWyJd4Yj_ZE9lk3FY8sKkeCE7DBoA-QRs",
       "authDomain": "sniper-stage.firebaseapp.com",
       "projectId": "sniper-stage"
@@ -31,7 +31,7 @@
       "dex": ""
     },
     "fb": {
-      "api": "http://localhost:5000/sniper-stage/us-central1/",
+      "api": "https://us-central1-sniper-prod.cloudfunctions.net/",
       "apiKey": "",
       "authDomain": "",
       "projectId": ""
