--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,24 @@
+sudo: required
+
 language: node_js
+
 node_js:
   - "lts/*"
 
 cache:
   directories:
     - "node_modules"
+
+services:
+  - docker
+
+env:
+  DOCKER_COMPOSE_VERSION: 1.11.2
+
+before_install:
+- docker pull trufflesuite/ganache-cli
+- docker run -d -p 8545:8545 trufflesuite/ganache-cli --defaultBalanceEther 10000
+- docker ps -a
 
 install:
   - npm install
