--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "scripts": {
     "start": "webpack-dashboard -- webpack-dev-server --config ./config/webpack.config.js --port 9000 --inline",
     "build": "rimraf dist && NODE_ENV=production webpack -p --config ./config/webpack.production.config.js",
-    "test": "cross-env NODE_ENV=test mocha --require ./config/mocha.setup",
-    "coverage-test": "cross-env NODE_ENV=test nyc mocha --require ./config/mocha.setup",
-    "coverage": "cross-env NODE_ENV=test nyc mocha --require ./config/mocha.setup && nyc report --reporter=text-lcov > coverage.lcov && codecov"
+    "test": "cross-env NODE_ENV=test truffle test",
+    "coverage-test": "cross-env NODE_ENV=test nyc truffle test",
+    "coverage": "cross-env NODE_ENV=test nyc truffle test && nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "rpc": "ganache-cli -s 2626hootcows2626 --defaultBalanceEther 10000",
+    "gulp": "gulp",
+    "deploy:ropsten": "rm -rf build/ && truffle compile && truffle migrate --network ropsten"
   },
   "nyc": {
     "require": [
@@ -44,7 +47,7 @@
     "firebase": "^4.10.0",
     "hoek": "4.2.1",
     "web3": "1.0.0-beta.30",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "~2.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
@@ -66,6 +69,7 @@
     "eslint-plugin-security": "^1.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
+    "ganache-cli": "6.1.0-beta.0",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.16.1",
     "isomorphic-fetch": "^2.2.1",
@@ -82,6 +86,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.0.0",
     "truffle": "^4.0.6",
+    "truffle-hdwallet-provider": "0.0.3",
     "webpack": "^1.10.0",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-server": "^1.10.1"
