--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "codecov": "^3.0.0",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.3",
     "css-loader": "^0.15.1",
     "es6-promisify": "~6.0.0",
