--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "firebase": "^4.10.0",
     "hoek": "4.2.1",
     "web3": "1.0.0-beta.30",
-    "whatwg-fetch": "~2.0.3"
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
@@ -73,7 +73,6 @@
     "ganache-cli": "6.1.0-beta.0",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.16.1",
-    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "mocha": "^5.0.1",
     "node-libs-browser": "^0.5.2",
