--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sniper-js",
   "version": "0.2.0",
   "description": "Core JS Module for Sniper.io Platform",
+  "license": "AGPL-3.0",
   "main": "src/main.js",
   "repository": {
     "type": "git",
@@ -9,7 +10,7 @@
   },
   "scripts": {
     "start": "webpack-dashboard -- webpack-dev-server --config ./config/webpack.config.js --port 9000 --inline",
-    "build": "rimraf dist && NODE_ENV=production webpack -p --config ./config/webpack.production.config.js",
+    "build": "rimraf dist && webpack --config ./config/webpack.production.config.js && webpack --target node --config ./config/webpack.production.config.js",
     "test": "cross-env NODE_ENV=test truffle test",
     "coverage-test": "cross-env NODE_ENV=test nyc truffle test",
     "coverage": "cross-env NODE_ENV=test nyc truffle test && nyc report --reporter=text-lcov > coverage.lcov && codecov",
@@ -50,14 +51,15 @@
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel-core": "^6.1.2",
-    "babel-loader": "^6.0.1",
+    "argv": "0.0.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-polyfill": "6.0.16",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.26.0",
     "bignumber.js-5": "git+https://github.com/sniper-exchange/bignumber.js.git#release/5.0.0",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
@@ -66,16 +68,18 @@
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.3",
     "css-loader": "^0.15.1",
+    "electron": "^1.8.3",
     "es6-promisify": "~6.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.10.0",
     "ganache-cli": "6.1.0-beta.0",
     "gulp": "^3.9.1",
-    "html-webpack-plugin": "^2.16.1",
+    "html-webpack-plugin": "^3.0.6",
     "json-loader": "^0.5.4",
     "mocha": "^5.0.1",
     "node-libs-browser": "^0.5.2",
+    "node-loader": "^0.6.0",
     "nsp": "^3.2.1",
     "nyc": "^11.4.1",
     "pug": "2.0.0-alpha7",
@@ -87,9 +91,11 @@
     "stylus-loader": "^2.0.0",
     "truffle": "^4.0.6",
     "truffle-hdwallet-provider": "0.0.3",
-    "webpack": "^1.10.0",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^1.10.1"
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-server": "^3.1.1"
   },
   "keywords": [
     "sniper",
